# git

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: cli.rs  context.rs  lib.rs  main.rs  utils.rs
src/commands/: cat_file.rs  hash_object.rs  hash_objects.rs  init.rs  ls_tree.rs  mod.rs
src/objects/: blob.rs  commit.rs  file.rs  hash.rs  kind.rs  mod.rs  object.rs  tree.rs
