[package]
name = "git"
version = "0.1.0"
authors = ["Jatinderjit Singh <jatinderjit89@gmail.com>"]
edition = "2021"
description = "Yet another Git implementation"
license = "MIT"
keywords = ["git", "rust"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive", "env", "unicode"] }
flate2 = "1.0.27"
sha1 = "0.10.5"
tempfile = "3.8.0"
